# VisualMemoryGames

./: .env.example  .gitignore  Dockerfile.back  Dockerfile.front  README  README.md  alembic.ini  docker-compose.yml  gamelog.db  mise.toml  package-lock.json  package.json  pyproject.toml  run_e2e_server.py  scratch_test.py  scratch_test_api.py
.github/workflows/: backend.yml  e2e.yml  frontend.yml
alembic/: env.py
alembic/versions/: 1451640390bf_refactoring_and_optimizing_backend_.py  2b27a09bd9af_add_email_verification.py  2b6195b4ca71_add_tables.py  2d16f40d52ee_criando_tabelas_iniciais.py  307d4fc6ade3_change_store_to_string.py  4475cdaa4893_add_order_index_to_custom_list_games.py  4c98e5afe83d_add_user_game_reviews_table.py  5188f4537cb9_add_password_reset.py  531eda37edfd_add_tables.py  53bc5734e14d_testando_aqui.py  785ac4603bb2_add_soft_delete_and_created_at.py  83e34212151c_add_social_features.py  9938f1c2ae7f_add_custom_lists.py  a20e025de8dc_add_itch_accounts_table.py  ba4bcb8a7491_add_new_fields_to_usergame.py  cc435a414017_add_steam_integration.py  ccf09b148d4e_add_last_active_at_to_user.py  d0f617016c9b_add_field_is_system_to_custom_list.py  e539f80f775b_add_patch_notes.py  fc5ca79a7ff7_add_is_admin_to_user.py  fd4b5af55b4f_add_release_year_platforms_genres_to_.py
app/: database.py  dependencies.py  limiter.py  main.py  security.py  utils.py
app/enums/: game_status.py  game_stores.py
app/models/: game.py  (+13 more)
frontend/: .env.example  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
gamelog-frontend/: index.html  package-lock.json  package.json
(+231 files in other folders)
