[project]
name = "visualmemory"
version = "0.1.0"
description = ""
authors = [
    {name = "João Anunciação",email = "js5283283@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
    "boto3 (>=1.43.37,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "resend (>=2.32.2,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
lint = "ruff:check"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)"
]
